5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1644_2445.log
== TEST (2019-04-16 13:14:16) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == F):
	total=5/9(v-32)
else:
	total=v*(5/9)+32
print(round(total))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (temp == F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:14:45) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9(v-32)
else:
	total=v*(5/9)+32
print(round(total))	
-- OUTPUT:
210
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:15:03) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9(v-32)
else:
	total=v*(5/9)+32
print(round(total))	
-- OUTPUT:
210
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:16:12) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9(v-32)
else:
	total=v*(5/9)+32
print(round(total))	
-- OUTPUT:
210
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:18:17) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9*(v-32)
else:
	total=c*(5/9)+32
print(round(total))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total=c*(5/9)+32
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:18:28) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9*(v-32)
else:
	total=c*(5/9)+32
print(round(total))	
-- EXECUTION TIME:
0.216921
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 6, in <module>
    total=c*(5/9)+32
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:18:34) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9*(v-32)
else:
	total=c*(5/9)+32
print(round(total))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total=c*(5/9)+32
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:18:43) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9*(v-32)
else:
	total=c*(5/9)+32
print(round(total))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total=c*(5/9)+32
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:18:58) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9*(v-32)
else:
	total=v*(5/9)+32
print(round(total))	
-- OUTPUT:
210
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:19:10) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9*(v-32)
else:
	total=v*(5/9)+32
print(round(total))	
-- EXECUTION TIME:
0.197489
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
210
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:55:43) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9*(v-32)
else:
	total=v*(9/5)+32
print(round(total))	
-- OUTPUT:
608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:56:13) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9*(v-32)
else:
	total=v*(9/5)+32
print(round(total, 2))	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:56:21) 
-- CODE:
temp=input("Em que escala esta a temperatura: ")
v=float(input("Valor da temperatura: "))
if (temp == "F"):
	total=5/9*(v-32)
else:
	total=v*(9/5)+32
print(round(total, 2))	
-- EXECUTION TIME:
0.151753
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
